Reinicializando repositório com novos arquivos

--- a/dashboard.html
+++ b/dashboard.html
@@ -1097,10 +1097,7 @@
                 <div class="logo-icon">
                     <i class="fas fa-atom"></i>
                 </div>
-                <div>
-                    <h1>FATOMANIA</h1>
-                    <span style="color: var(--azul); font-size: 0.9rem;">HUB Científico</span>
-                </div>
+                <h1><a href="/dashboard.html" style="color: inherit; text-decoration: none;">FATOMANIA</a></h1>
             </div>
 
             <div class="header-actions">
