--- a/mania/labmania-modern.html
+++ b/mania/labmania-modern.html
@@ -234,9 +234,9 @@
             <p class="slogan">Laboratórios científicos virtuais!</p>
         </div>
         <nav>
-            <a href="/dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="../dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
             <a href="#" onclick="toggleFavorites()"><i class="fas fa-bookmark"></i> Favoritos</a>
-            <a href="/submit-lab.html" class="submit-btn">
+            <a href="../submit-lab.html" class="submit-btn">
                 <i class="fas fa-plus"></i> Enviar Experimento
             </a>
         </nav>
