--- a/mania/medmania-modern.html
+++ b/mania/medmania-modern.html
@@ -409,9 +409,9 @@
             <p class="slogan">Cuidando da sua saúde!</p>
         </div>
         <nav>
-            <a href="/dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="../dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
             <a href="#" onclick="toggleFavorites()"><i class="fas fa-bookmark"></i> Favoritos</a>
-            <a href="/submit-med.html" class="submit-btn">
+            <a href="../submit-med.html" class="submit-btn">
                 <i class="fas fa-plus"></i> Enviar Conteúdo
             </a>
         </nav>
@@ -484,17 +484,39 @@
 
         async function loadArticles() {
             try {
-                const articlesQuery = window.firebaseDB.query(
+                let articlesQuery = window.firebaseDB.query(
                     window.firebaseDB.collection(window.firebaseDB.db, 'med-articles'),
                     window.firebaseDB.where('status', '==', 'published'),
                     window.firebaseDB.orderBy('createdAt', 'desc')
                 );
 
-                const snapshot = await window.firebaseDB.getDocs(articlesQuery);
-                currentArticles = snapshot.docs.map(doc => ({
-                    id: doc.id,
-                    ...doc.data()
-                }));
+                try {
+                    const snapshot = await window.firebaseDB.getDocs(articlesQuery);
+                    currentArticles = snapshot.docs.map(doc => ({
+                        id: doc.id,
+                        ...doc.data()
+                    }));
+                } catch (queryError) {
+                    if (queryError.code === 'failed-precondition') {
+                        console.warn('⚠️ Índice composto não disponível, usando query simples');
+                        articlesQuery = window.firebaseDB.query(
+                            window.firebaseDB.collection(window.firebaseDB.db, 'med-articles'),
+                            window.firebaseDB.where('status', '==', 'published')
+                        );
+                        const snapshot = await window.firebaseDB.getDocs(articlesQuery);
+                        currentArticles = snapshot.docs.map(doc => ({
+                            id: doc.id,
+                            ...doc.data()
+                        }));
+                        currentArticles.sort((a, b) => {
+                            const dateA = a.createdAt?.seconds || 0;
+                            const dateB = b.createdAt?.seconds || 0;
+                            return dateB - dateA;
+                        });
+                    } else {
+                        throw queryError;
+                    }
+                }
 
                 filteredArticles = [...currentArticles];
                 renderArticles();
@@ -616,54 +638,14 @@
             });
         }
 
-        window.openArticle = function(articleId) {
-            console.log('Opening article:', articleId);
-            const modal = document.createElement('div');
-            modal.className = 'modal active';
-            modal.innerHTML = `
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h2 class="modal-title">Carregando artigo...</h2>
-                        <button class="close-btn" onclick="this.parentElement.parentElement.remove()">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Carregando conteúdo do artigo ${articleId}...</p>
-                    </div>
-                </div>
-            `;
-            document.body.appendChild(modal);
-
-            window.firebaseDB.getDoc(window.firebaseDB.doc(window.firebaseDB.db, 'med-articles', articleId))
-                .then(docSnap => {
-                    if (docSnap.exists()) {
-                        const article = docSnap.data();
-                        const modalBody = modal.querySelector('.modal-body');
-                        const modalTitle = modal.querySelector('.modal-title');
-
-                        modalTitle.textContent = article.title;
-                        modalBody.innerHTML = `
-                            ${article.imageUrl ? `<img src="${article.imageUrl}" alt="${article.title}">` : ''}
-                            <p>${article.content}</p>
-                            <div class="article-meta">
-                                <div class="article-author">
-                                    <i class="fas fa-user-md"></i>
-                                    <span>${article.author}</span>
-                                </div>
-                                <div class="article-stats">
-                                    <span><i class="fas fa-eye"></i> ${article.views || 0}</span>
-                                    <span><i class="fas fa-heart"></i> ${article.likes || 0}</span>
-                                </div>
-                            </div>
-                        `;
-                    } else {
-                        console.error('No such document!');
-                        modal.querySelector('.modal-body').innerHTML = '<p>Erro ao carregar artigo. Artigo não encontrado.</p>';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error getting article:', error);
-                    modal.querySelector('.modal-body').innerHTML = '<p>Erro ao carregar artigo. Tente novamente mais tarde.</p>';
-                });
+        window.openArticle = async function(articleId) {
+            try {
+                // Usa a função compartilhada de shared-utils.js
+                const { openArticle: openArticleUtil } = await import('/js/shared-utils.js');
+                await openArticleUtil(articleId, 'med-articles');
+            } catch (error) {
+                console.error('Erro ao abrir artigo:', error);
+            }
         };
 
 
