--- a/paginainicial.html
+++ b/paginainicial.html
@@ -21,9 +21,9 @@
         </div>
         <nav>
             <a href="/dashboard.html">Início</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Quizzes</a>
-            <a href="/sobre-nos.html">Sobre</a>
+            <a href="/mania/sciencemania-modern.html">Curiosidades</a>
+            <a href="/mania/quizmania-modern.html">Quizzes</a>
+            <a href="/Descrição_Fatomania.html">Sobre</a>
             <button class="apps-menu-button" id="apps-button">
                 <svg width="24" height="24" viewBox="0 0 24 24">
                     <path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"/>
